# r_tlk_test_assignments

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
