[tool.poetry]
name = "r-tlk-test-assignment"
version = "0.1.0"
description = ""
authors = ["dan"]
license = "MIT"
readme = "README.md"
packages = [{include = "r_tlk_test_assignment"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
